syntax = "proto3";
package stafiprotocol.stafihub.rate;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "rate/rate.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/stafiprotocol/stafihub/x/rate/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a exchangeRate by index.
	rpc ExchangeRate(QueryGetExchangeRateRequest) returns (QueryGetExchangeRateResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/rate/exchangeRate/{denom}";
	}

	// Queries a list of exchangeRate items.
	rpc ExchangeRateAll(QueryAllExchangeRateRequest) returns (QueryAllExchangeRateResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/rate/exchangeRate";
	}

// Queries a eraExchangeRate by index.
	rpc EraExchangeRate(QueryGetEraExchangeRateRequest) returns (QueryGetEraExchangeRateResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/rate/eraExchangeRate/{denom}/{era}";
	}

// Queries a list of eraExchangeRateByDenom items.
	rpc EraExchangeRateByDenom(QueryEraExchangeRateByDenomRequest) returns (QueryEraExchangeRateByDenomResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/rate/eraExchangeRateByDenom/{denom}";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetExchangeRateRequest {
    string denom = 1;
}

message QueryGetExchangeRateResponse {
	ExchangeRate exchangeRate = 1 [(gogoproto.nullable) = false];
}

message QueryAllExchangeRateRequest {
}

message QueryAllExchangeRateResponse {
	repeated ExchangeRate exchangeRate = 1 [(gogoproto.nullable) = false];
}

message QueryGetEraExchangeRateRequest {
	  string denom = 1;
	  uint32 era = 2;
}

message QueryGetEraExchangeRateResponse {
	EraExchangeRate eraExchangeRate = 1 [(gogoproto.nullable) = false];
}

message QueryEraExchangeRateByDenomRequest {
  string denom = 1;
}

message QueryEraExchangeRateByDenomResponse {
    repeated EraExchangeRate eraExchangeRates = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
